Add constructor for making IndexLocator testable